# logfire-otel-export

./: .gitignore  README.md  docker-compose.yml  grafana-dashboard-direct.json  grafana-dashboard.json  justfile  main-prometheus.py  main.py  otel-collector-config.yml  prometheus.yml  pyproject.toml  setup-grafana.sh  setup.sh
