[project]
name = "logfire-otel-histogram"
version = "0.1.0"
description = "Logfire histogram demo with OpenTelemetry and Grafana visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=0.50.0",
    "prometheus-client>=0.19.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
